--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "devDependencies": {
     "@babel/cli": "^7.28.0",
     "@babel/core": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
+    "@babel/preset-react": "^7.27.1",
     "vite": "^7.0.4"
+  },
+  "dependencies": {
   }
 }
